--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0"
