--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "flash": "^1.1.0",
     "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0"
