--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -18,6 +18,7 @@
     "flash": "^1.1.0",
     "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "projeto_banco_mysql": "file:"
   }
 }
